Bug 148157 - Assertion after having chosen "Between tick marks", click outside the chart
Summary: Assertion after having chosen "Between tick marks", click outside the chart
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.4.0
Keywords: haveBacktrace
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2022-03-24 08:02 UTC by Julien Nabet
Modified: 2022-03-25 10:35 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
test file (13.29 KB, application/vnd.oasis.opendocument.spreadsheet)
2022-03-24 08:03 UTC, Julien Nabet
Details
bt with debug symbols (29.45 KB, text/plain)
2022-03-24 08:03 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2022-03-24 08:02:53 UTC
Description:
On pc Debian x86-64 with master sources updated today + enable-dbgutil, I got an assertion after having chosen Between tick marks" and click outside the chart.

Steps to Reproduce:
1. Open attachment
2. Double click in the graph
3. right click on horizontal axis
4. Format Axis...
5. Click "Between tick marks" in Position Axis part
6. Click Ok
7. Click outside the chart (eg: cell A25)

Actual Results:
Assertion

Expected Results:
No Assertion


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 6f80e618a79ac70bc6658771b64d018cd228200e
CPU threads: 12; OS: Linux 5.16; UI render: default; VCL: x11
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded
Comment 1 Julien Nabet 2022-03-24 08:03:34 UTC
Created attachment 179064 [details]
test file
Comment 2 Julien Nabet 2022-03-24 08:03:49 UTC
Created attachment 179065 [details]
bt with debug symbols
Comment 3 Commit Notification 2022-03-25 10:34:43 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/70cda6eff03ea186bff65318ed8d4cbeff7cbc48

tdf#148157: assertion after set "Between tick marks", click outside the chart

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2022-03-25 10:35:34 UTC
No need to backport it, a priori, in 7.3 or 7.2 branches