tdf#148157: assertion after set "Between tick marks", click outside the chart

See bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=179065

Change-Id: Id21f52d5cc33bbe99c27b7a8bdff056249c4d4fb